--- a/rami/src/index.css
+++ b/rami/src/index.css
@@ -26,6 +26,14 @@ a:hover {
   color: #535bf2;
 }
 
+p{
+  color: #6B7280;
+}
+
+h2{
+  color: #6B7280;
+}
+
 body {
   margin: 0;
   display: flex;
