--- a/rami/src/pages/RecentProjects/RecentProjects.css
+++ b/rami/src/pages/RecentProjects/RecentProjects.css
@@ -72,7 +72,7 @@
 /* Project Items */
 .project-item {
   margin-bottom: 4rem;
-  background-color: #E3E3E3;
+  background-color: #fff;
   padding: 2rem;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
