--- a/rami/src/index.css
+++ b/rami/src/index.css
@@ -27,12 +27,13 @@ a:hover {
 }
 
 p{
-  color: #6B7280;
+  color: black;
 }
 
 h2{
-  color: #6B7280;
+  color: #235857;
 }
+
 
 body {
   margin: 0;
