--- a/rami/src/pages/News/News4.css
+++ b/rami/src/pages/News/News4.css
@@ -1,6 +1,6 @@
 /* News4.css */
 .news4-page {
-  background-color: #f0f0f0; /* lighter grey background */
+  background-color: #235857; /* lighter grey background */
   color: #333;
   padding: 80px 20px 40px;
   font-family: Arial, sans-serif;
@@ -11,7 +11,7 @@
 .news4-title {
   font-size: 2.5em;
   margin-bottom: 20px;
-  color: #333;
+  color: white;
   font-weight: bold; /* Bold title */
 }
 
