--- a/rami/src/pages/News/News.css
+++ b/rami/src/pages/News/News.css
@@ -1,6 +1,6 @@
 /* News.css */
 .news-page {
-  background-color: #235857; /* lighter grey background */
+  background-color: #CDCDCD; /* lighter grey background */
 }
 
 .news-container {
@@ -10,7 +10,7 @@
 }
 
 .news-item {
-  background-color: #F1EBEC; /* card color changed to white */
+  background-color: #ffffff; /* card colour changed to white */
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: 20px 0;
@@ -22,17 +22,9 @@
   text-align: left;
 }
 
-.news-image {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-}
-
 .news-image img {
-  width: 90%; /* Shrink images so they are not up against the containers */
+  width: 100%;
   height: auto;
-  border-radius: 10px;
 }
 
 .news-content {
@@ -41,9 +33,12 @@
 
 .news-date {
   font-size: 1.25em; /* increased font-size of the date */
-  color: #666;
+  color: black;
   margin-bottom: 10px;
+  display: block;
+  margin: 20px auto;
   text-align: center;
+
 }
 
 .news-item-title {
@@ -69,12 +64,13 @@
 
 .news-link {
   font-size: 1.25em; /* increased font-size of the 'read more' text */
-  color: #235857;
+  color: #EF4444;
   text-decoration: none;
   font-weight: bold;
   display: block;
   margin: 20px auto;
   text-align: center;
+
 }
 
 .news-link:hover {
@@ -101,15 +97,4 @@
 
 .arrow {
   margin-right: 10px;
-}
-
-/* Responsive Design */
-@media (max-width: 768px) {
-  .news-item {
-    width: 95%; /* Adjust width for smaller screens */
-  }
-
-  .news-image img {
-    width: 100%; /* Ensure images are responsive on smaller screens */
-  }
 }
