--- a/rami/src/pages/News/News3.css
+++ b/rami/src/pages/News/News3.css
@@ -1,6 +1,6 @@
 /* src/components/News3.css */
 .news3-page {
-  background-color: #235857 !important; /* Lighter grey background */
+  background-color: #CDCDCD !important; /* Lighter grey background */
   color: #333;
   padding: 80px 20px 40px; /* Adjusted padding */
   font-family: Arial, sans-serif;
@@ -11,7 +11,7 @@
 .news3-title {
   font-size: 2.5em;
   margin-bottom: 20px;
-  color: white;
+  color: black;
   font-weight: bold; /* Bold title */
 }
 
@@ -31,13 +31,9 @@
   margin-top: 20px;
 }
 
-p{
-  color: white;
-}
-
 .news3-date {
   font-size: 1.5em; /* Increased font-size */
-  color: #666;
+  color: black;
   margin-bottom: 10px;
   display: block;
   margin: 20px auto;
