--- a/rami/src/pages/Home/Home.css
+++ b/rami/src/pages/Home/Home.css
@@ -303,7 +303,7 @@
   align-items: center;
   max-width: 800px;
   padding: 40px;
-  background-color: rgb(255, 255, 255);
+  background-color: #f1eeec;
   border-radius: 10px;
   /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
 }
